--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2family=Inter:wght@400;500;600;700&display=swap'); */
+@import url("https://fonts.googleapis.com/css2family=Inter:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,300;0,400;1,700&display=swap");
 
 *,
@@ -701,6 +701,7 @@ h6 {
     background-color: white;
     display: flex;
     align-items: center;
+    height: 10%;
 }
 .conversation-back {
     background-color: transparent;
@@ -786,7 +787,7 @@ h6 {
 .conversation-main {
     overflow-y: auto;
     overflow-x: hidden;
-    height: 100%;
+    height: 80%;
     padding: 16px;
 }
 .conversation-wrapper {
@@ -823,7 +824,7 @@ h6 {
 .conversation-item-box {
     max-width: 720px;
     position: relative;
-    margin-left: auto;
+    /* margin-left: auto; */
 }
 .conversation-item.me .conversation-item-box {
     margin-left: unset;
@@ -971,6 +972,7 @@ h6 {
     background-color: white;
     display: flex;
     align-items: flex-end;
+    height: 10%;
 }
 .conversation-form-group {
     width: 100%;
@@ -1449,4 +1451,37 @@ h6 {
 
 .conversation-item-wrapper.other-user {
     text-align: right;
+}
+
+/* public\css\style.css */
+
+.conversation-item-box {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.conversation-item-box.received {
+    justify-content: flex-start;
+}
+
+.conversation-item-box.sent {
+    justify-content: flex-end;
+}
+
+.conversation-item-text {
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.conversation-item-box.received .conversation-item-text {
+    background-color: #fff;
+}
+
+.conversation-item-box.sent .conversation-item-text {
+    background-color: #7562a7; /* Ваш желаемый цвет для отправленных сообщений */
+    color: #fff; /* Пример: текст будет белым на фоне #7562a7 */
+}
+
+.conversation-item-dropdown {
+    margin-left: 10px;
 }
